0.1.0b0/_sources/examples_pipelines/index.rst.txt
:orphan:



.. _sphx_glr_examples_pipelines:

Pipelines Examples
==================


.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_examples_pipelines_kfp:

KubeFlow Pipelines Examples
###########################



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This an introductory pipeline using KubeFlow Pipelines built with only TorchX components.">

.. only:: html

 .. figure:: /examples_pipelines/kfp/images/thumb/sphx_glr_intro_pipeline_thumb.png
     :alt: Intro KubeFlow Pipelines Example

     :ref:`sphx_glr_examples_pipelines_kfp_intro_pipeline.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples_pipelines/kfp/intro_pipeline

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example pipeline using KubeFlow Pipelines built with only TorchX components.">

.. only:: html

 .. figure:: /examples_pipelines/kfp/images/thumb/sphx_glr_advanced_pipeline_thumb.png
     :alt: Advanced KubeFlow Pipelines Example

     :ref:`sphx_glr_examples_pipelines_kfp_advanced_pipeline.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples_pipelines/kfp/advanced_pipeline
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download sphx-glr-download-python

    :download:`Download all examples in Python source code: examples_pipelines_python.zip </examples_pipelines/examples_pipelines_python.zip>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

    :download:`Download all examples in Jupyter notebooks: examples_pipelines_jupyter.zip </examples_pipelines/examples_pipelines_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
