0.1.1/_sources/examples_pipelines/index.rst.txt
:orphan:



.. _sphx_glr_examples_pipelines:

Pipelines Examples
==================

This contains examples of using TorchX components as part of pipelines.


.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_examples_pipelines_kfp:

KubeFlow Pipelines Examples
###########################

Each of these files is a python file that generates a Kubeflow Pipeline
definition that uses TorchX components. The generated ``pipeline.yaml`` files
can be uploaded to a KFP cluster to run the pipeline.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example KFP pipeline that uses resource_from_app to launch a distributed operator us...">

.. only:: html

 .. figure:: /examples_pipelines/kfp/images/thumb/sphx_glr_dist_pipeline_thumb.png
     :alt: Distributed KubeFlow Pipelines Example

     :ref:`sphx_glr_examples_pipelines_kfp_dist_pipeline.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples_pipelines/kfp/dist_pipeline

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This an introductory pipeline using KubeFlow Pipelines built with only TorchX components.">

.. only:: html

 .. figure:: /examples_pipelines/kfp/images/thumb/sphx_glr_intro_pipeline_thumb.png
     :alt: Intro KubeFlow Pipelines Example

     :ref:`sphx_glr_examples_pipelines_kfp_intro_pipeline.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples_pipelines/kfp/intro_pipeline

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is an example pipeline using KubeFlow Pipelines built with only TorchX components.">

.. only:: html

 .. figure:: /examples_pipelines/kfp/images/thumb/sphx_glr_advanced_pipeline_thumb.png
     :alt: Advanced KubeFlow Pipelines Example

     :ref:`sphx_glr_examples_pipelines_kfp_advanced_pipeline.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples_pipelines/kfp/advanced_pipeline
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download sphx-glr-download-python

    :download:`Download all examples in Python source code: examples_pipelines_python.zip <//home/ubuntu/code/torchx/docs/source/examples_pipelines/examples_pipelines_python.zip>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

    :download:`Download all examples in Jupyter notebooks: examples_pipelines_jupyter.zip <//home/ubuntu/code/torchx/docs/source/examples_pipelines/examples_pipelines_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
